# rag-system-public-events

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
Scripts/: build_index.py  chatbot.py  evaluate.py
Tests/: test_api.py  test_data_loader.py  test_embedding.py  test_processing.py
src/api/: main.py  schemas.py
src/core/: chatbot.py  data_loader.py  embedding.py  faiss_manager.py  pipeline.py  processing.py  query_app.py  rag_service.py
